2003-05-19  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Include <winver.h>.
	Reported by Perry Rapp.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Define HAVE_DECL_STRERROR.

2003-05-12  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke AC_GNU_SOURCE and jm_FUNC_GLIBC_UNLOCKED_IO.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Renamed from config.h.vms.
	* Makefile.vms: Don't use the force target. Don't recurse into
	libasprintf. Use config.h_vms, not config.h.vms. Correct wildcard
	syntax.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* configure.ac (mandir): Change default value.
	* Makefile.msvc (mandir, docdir): Use datadir instead of prefix.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (config.h.vms): New rule.
	(EXTRA_DIST): Add Makefile.vms and config.h.vms.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* Makefile.msvc: New file.
	* README.woe32: New file.
	* windows/dllexport.h: New file.
	* windows/intl.rc: New file.
	* Makefile.am (EXTRA_DIST): Add them and config.h.msvc.
	(config.h.msvc, intl/libgnuintl.h.msvc-shared): New rules.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Support for relocatable installation.
	* configure.ac: Invoke AC_RELOCATABLE, gt_STDBOOL_H, gl_FUNC_ALLOCA,
	AC_REPLACE_FUNCS([memmove]), gt_FUNC_SETENV, gl_FUNC_STRERROR,
	gl_PATHMAX, gl_XREADLINK, gl_CANONICALIZE.
	* INSTALL: Document --enable-relocatable and --with-libintl-prefix.

2003-02-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (ps, pdf): Remove rules, redundant with automake 1.7.2.

2003-02-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Install ABOUT-NLS in $(datadir)/gettext.

2003-02-12  Bruno Haible  <bruno@clisp.org>

	Extracted from gettext package.